--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
-    "presets": ["env"],
-    "plugins":[]//,["transform-runtime"]
-    //"comments": true
-  }
+  "presets": [
+    "es2015",
+    "stage-0"
+  ]
+}
