--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "test": "webpack",
     "build": "webpack",
-    "dev": "webpack-dev-server --env.dev",
-    "clear": "rm -rf dist/* "
+    "dev": "webpack --watch",
+    "clear": "rm -rf dist/*"
   },
   "keywords": [
     "simple",
@@ -19,48 +19,34 @@
   "license": "GPL-2.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/swwind/Valine.git"
-  },
-  "autoupdate": {
-    "source": "git",
-    "target": "git://github.com/swwind/Valine.git",
-    "fileMap": [
-      {
-        "basePath": "dist",
-        "files": [
-          "Valine*.+(js|map|css)"
-        ]
-      },
-      {
-        "basePath": "src",
-        "files": [
-          "*.+(js|map|css|scss)"
-        ]
-      }
-    ]
+    "url": "git+https://github.com/swwind/valine-ex.git"
   },
   "bugs": {
-    "url": "https://github.com/swwind/Valine/issues"
+    "url": "https://github.com/swwind/valine-ex/issues"
   },
-  "homepage": "https://github.com/swwind/Valine#readme",
+  "homepage": "https://github.com/swwind/valine-ex#readme",
   "devDependencies": {
     "autoprefixer": "^7.1.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-env": "^1.6.1",
-    "blueimp-md5": "^2.8.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.11.2",
-    "marked": "^0.3.6",
-    "node-sass": "^4.5.0",
+    "node-sass": "^4.9.0",
     "postcss-loader": "^2.0.5",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.18.2",
     "url-loader": "^0.6.2",
     "vconsole": "^3.0.0",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^3.0.7",
     "xss": "^0.3.7"
+  },
+  "dependencies": {
+    "blueimp-md5": "^2.8.0",
+    "marked": "^0.4.0"
   }
 }
