--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "valine-ex",
-  "version": "1.1.9",
+  "version": "1.2.0-beta1",
   "description": "A simple comment system based on Leancloud.",
   "main": "/dist/Valine.min.js",
   "author": "xCss <xioveliu@gmail.com> (https://github.com/xCss) & swwind <swwind233@gmail.com> (https://github.com/swwind)",
   "scripts": {
-    "test": "webpack",
     "build": "webpack",
     "dev": "webpack --watch",
     "clear": "rm -rf dist/*"
@@ -26,24 +25,19 @@
   },
   "homepage": "https://github.com/swwind/valine-ex#readme",
   "devDependencies": {
-    "autoprefixer": "^7.1.1",
+    "autoprefixer": "^8.6.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
-    "exports-loader": "^0.6.3",
-    "file-loader": "^0.11.2",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.0.5",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.18.2",
-    "url-loader": "^0.6.2",
-    "vconsole": "^3.0.0",
     "webpack": "^4.2.0",
-    "webpack-cli": "^3.0.7",
-    "xss": "^0.3.7"
+    "webpack-cli": "^3.0.7"
   },
   "dependencies": {
     "blueimp-md5": "^2.8.0",
