--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "valine-ex",
-  "version": "1.2.0-beta1",
+  "version": "1.2.0-beta",
   "description": "A simple comment system based on Leancloud.",
   "main": "/dist/Valine.min.js",
   "author": "xCss <xioveliu@gmail.com> (https://github.com/xCss) & swwind <swwind233@gmail.com> (https://github.com/swwind)",
