--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "valine-ex",
   "version": "1.2.0-beta2",
   "description": "A simple comment system based on Leancloud.",
-  "main": "/dist/Valine.min.js",
+  "main": "/dist/valine-ex.min.js",
   "author": "xCss <xioveliu@gmail.com> (https://github.com/xCss) & swwind <swwind233@gmail.com> (https://github.com/swwind)",
   "scripts": {
     "build": "webpack",
